activities scrollbar fixed

--- a/src/app/components/activities/activities.component.scss
+++ b/src/app/components/activities/activities.component.scss
@@ -6,8 +6,8 @@
   gap: 8px;
   font-family: sans-serif;
   padding-left: 8px;
-  position: sticky;
-  top: 0;
+  //position: sticky;
+  //top: 0;
 }
 
 .searchIcon {
